--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -105,7 +105,7 @@ position: -webkit-sticky;
 
           .titulo {
             font-size: 30px;
-            margin-left: 400px;
+            margin-left: 25%;
             color: rgb(0, 0, 0);
             position: relative;
            
@@ -120,7 +120,7 @@ position: -webkit-sticky;
             color: rgb(0, 0, 0);
                }
           .texto2{
-            margin-left: 400px;
+            margin-left: 25%;
             font-size: 20px;
             color: rgb(0, 0, 0);
             font-family: "PT Sans Narrow", sans-serif;
@@ -132,7 +132,7 @@ position: -webkit-sticky;
 
           
           .subtexto {
-            margin-left: 500px;
+            margin-left: 30%;
             color: rgb(0, 0, 0);
             font-size: 20px;
             font-family: "PT Sans Narrow", sans-serif;
